css/nft-pok-page-desktop-all-breakpoints.css
/* ... */
.nft-pok-page-desktop-all-breakpoints .overlap-group5-1 {
  align-self: flex-start;
  height: 446px;
  position: relative;
  width: 1440px;
}

.nft-pok-page-desktop-all-breakpoints .learn-more-2 {
  left: 889px;
  letter-spacing: 0;
  line-height: 39.2px;
  position: absolute;
  text-decoration: underline;
  text-shadow: 0px 4px 4px #00000040;
  top: 254px;
  width: 152px;
}

.nft-pok-page-desktop-all-breakpoints .student-card-right-1-1 {
  height: 271px;
  left: 1259px;
  object-fit: cover;
  position: absolute;
  top: 0;
  width: 181px;
}

.nft-pok-page-desktop-all-breakpoints .student-card-right-2 {
  height: 311px;
  left: 1058px;
  object-fit: cover;
  position: absolute;
  top: 135px;
  width: 382px;
}

.nft-pok-page-desktop-all-breakpoints .student-card-left-1-1 {
  height: 254px;
  left: 97px;
  object-fit: cover;
  position: absolute;
  top: 46px;
  width: 387px;
}

.nft-pok-page-desktop-all-breakpoints .student-card-left-2-1 {
  height: 275px;
  left: 0;
  object-fit: cover;
  position: absolute;
  top: 171px;
  width: 193px;
}

.nft-pok-page-desktop-all-breakpoints .student-cards-to-delight-your-audience-1 {
  color: var(--cultured-pearl);
  font-family: var(--font-family-outfit);
  font-size: 50px;
  font-weight: 700;
  left: 464px;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  text-align: center;
  top: 136px;
  width: 744px;
}

.nft-pok-page-desktop-all-breakpoints .overlap-group-container-1 {
  align-items: flex-start;
  display: flex;
  margin-right: 2.83px;
  margin-top: 60px;
  min-width: 1346px;
}

.nft-pok-page-desktop-all-breakpoints .overlap-group2-3 {
  align-items: flex-end;
  background-color: var(--purple-mountains-majesty);
  border-radius: 10px;
  display: flex;
  height: 439px;
  min-width: 423px;
  padding: 19px 5px;
}

.nft-pok-page-desktop-all-breakpoints .build-own-your-com-1 {
  letter-spacing: 0;
  line-height: 44.8px;
  min-height: 390px;
  text-align: center;
  text-shadow: 0px 4px 4px #00000040;
  width: 411px;
}

.nft-pok-page-desktop-all-breakpoints .overlap-group1-3 {
  align-items: flex-start;
  background-color: var(--purple-mountains-majesty);
  border-radius: 10px;
  display: flex;
  height: 439px;
  justify-content: flex-end;
  margin-left: 39px;
  min-width: 423px;
  padding: 30px 26px;
}

.nft-pok-page-desktop-all-breakpoints .offer-perks-your-st-2 {
  letter-spacing: 0;
  line-height: 44.8px;
  min-height: 361px;
  text-align: center;
  text-shadow: 0px 4px 4px #00000040;
  width: 366px;
}

.nft-pok-page-desktop-all-breakpoints .overlap-group-6 {
  align-items: flex-end;
  background-color: var(--purple-mountains-majesty);
  border-radius: 10px;
  display: flex;
  height: 439px;
  margin-left: 38px;
  min-width: 423px;
  padding: 11px;
}

.nft-pok-page-desktop-all-breakpoints .build-loyalty-and-re {
  letter-spacing: 0;
  line-height: 44.8px;
  min-height: 398px;
  text-align: center;
  text-shadow: 0px 4px 4px #00000040;
  width: 397px;
}

.nft-pok-page-desktop-all-breakpoints .overlap-group3-1 {
  align-items: flex-start;
  background-color: var(--fuchsia);
  border-radius: 10px;
  box-shadow: 0px 4px 4px #00000040 , 0px 4px 4px #00000040;
  display: flex;
  height: 41px;
  margin-left: 59.17px;
  margin-top: 49px;
  min-width: 244px;
  padding: 7px 13.9px;
}

.nft-pok-page-desktop-all-breakpoints .group-nfts-to-sell-your-courses-1 {
  align-items: flex-start;
  align-self: flex-start;
  display: flex;
  flex-direction: column;
  gap: 13px;
  margin-left: -43px;
  margin-top: 143px;
  min-height: 826px;
  padding: 0 4px;
  width: 1446px;
}

.nft-pok-page-desktop-all-breakpoints .overlap-group4 {
  height: 374px;
  margin-left: 39px;
  position: relative;
  width: 500px;
}

.nft-pok-page-desktop-all-breakpoints .learn-more-3 {
  left: 862px;
  letter-spacing: 0;
  line-height: 39.2px;
  position: absolute;
  text-decoration: underline;
  text-shadow: 0px 4px 4px #00000040;
  top: 191px;
  width: 152px;
}

.nft-pok-page-desktop-all-breakpoints .course-container {
  height: 374px;
  left: 0;
  position: absolute;
  top: 0;
  width: 500px;
}

.nft-pok-page-desktop-all-breakpoints .business-course-card {
  height: 374px;
  left: 0;
  object-fit: cover;
  position: absolute;
  top: 0;
  width: 482px;
}

.nft-pok-page-desktop-all-breakpoints .nf-ts-to-sell-your-courses-anywhere-1 {
  color: var(--cultured-pearl);
  font-family: var(--font-family-outfit);
  font-size: 54px;
  font-weight: 700;
  left: 360px;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  text-align: center;
  top: 55px;
  width: 744px;
}

.nft-pok-page-desktop-all-breakpoints .overlap-group-container-2 {
  align-items: flex-start;
  align-self: flex-end;
  display: flex;
  min-width: 1341px;
}

.nft-pok-page-desktop-all-breakpoints .overlap-group2-4 {
  align-items: flex-end;
  background-color: var(--purple-mountains-majesty);
  border-radius: 10px;
  display: flex;
  height: 439px;
  min-width: 423px;
  padding: 19px 4px;
}

.nft-pok-page-desktop-all-breakpoints .sell-your-course-nft-1 {
  letter-spacing: 0;
  line-height: 44.8px;
  min-height: 390px;
  text-align: center;
  text-shadow: 0px 4px 4px #00000040;
  width: 411px;
}

.nft-pok-page-desktop-all-breakpoints .overlap-group1-4 {
  align-items: flex-end;
  background-color: var(--purple-mountains-majesty);
  border-radius: 10px;
  display: flex;
  height: 439px;
  margin-left: 39px;
  min-width: 423px;
  padding: 19px 6px;
}

.nft-pok-page-desktop-all-breakpoints .wallet-to-wallet-ins {
  letter-spacing: 0;
  line-height: 44.8px;
  min-height: 390px;
  text-align: center;
  text-shadow: 0px 4px 4px #00000040;
  width: 411px;
}

.nft-pok-page-desktop-all-breakpoints .overlap-group-7 {
  align-items: flex-end;
  background-color: var(--purple-mountains-majesty);
  border-radius: 10px;
  display: flex;
  height: 439px;
  margin-left: 33px;
  min-width: 423px;
  padding: 19px 6px;
}
/* ... */

